<resources>
    <string name="app_name">MortgageMaster</string>
    <string name="app_description">Mortgage Payment Calculator</string>
    <string name="mortgage_principal">Mortgage principal amount</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="amortization_period"> Amortization Period</string>
    <string name="calculate_EMI"> Calculate</string>
    <string name="helpButton"> Help</string>
    <string-array name="period">
        <item>Select</item>
        <item> 1 year</item>
        <item> 2 years</item>
        <item> 3 years</item>
        <item> 4 years</item>
        <item> 5 years</item>
        <item> 6 years</item>
        <item> 7 years</item>
        <item> 8 years</item>
        <item> 9 years</item>
        <item> 10 years</item>
        <item> 11 years</item>
        <item> 12 years</item>
        <item> 13 years</item>
        <item> 14 years</item>
        <item> 15 years</item>
        <item> 16 years</item>
        <item> 17 years</item>
        <item> 18 years</item>
        <item> 19 years</item>
        <item> 20 years</item>
        <item> 21 years</item>
        <item> 22 years</item>
        <item> 23 years</item>
        <item> 24 years</item>
        <item> 25 years</item>
        <item> 26 years</item>
        <item> 27 years</item>
        <item> 28 years</item>
        <item> 29 years</item>
        <item> 30 years</item>
    </string-array>
</resources>